// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Absolute link, starting with http:// 1`] = `
<a
  class="-dr-pogodin-react-utils___src-shared-components-GenericLink-style___link___zH52sA"
  href="http://www.domain.com/test"
  rel="noopener noreferrer"
  target=""
>
  ABSOLUTE LINK
</a>
`;

exports[`Absolute link, starting with https:// 1`] = `
<a
  class="-dr-pogodin-react-utils___src-shared-components-GenericLink-style___link___zH52sA"
  href="https://www.domain.com/test"
  rel="noopener noreferrer"
  target=""
>
  ABSOLUTE LINK
</a>
`;

exports[`Anchor link 1`] = `
<a
  class="-dr-pogodin-react-utils___src-shared-components-GenericLink-style___link___zH52sA"
  href="#anchor"
  rel="noopener noreferrer"
  target=""
>
  ANCHOR LINK
</a>
`;

exports[`Relative link 1`] = `
<button
  type="button"
>
  {"discover":"none","to":"http/relative/link","children":"RELATIVE LINK"}
</button>
`;

exports[`Relative link, with \`enforceA\` 1`] = `
<a
  class="-dr-pogodin-react-utils___src-shared-components-GenericLink-style___link___zH52sA"
  href="/relative/link"
  rel="noopener noreferrer"
  target=""
>
  RELATIVE LINK
</a>
`;

exports[`Relative link, with \`openNewTab\` 1`] = `
<a
  class="-dr-pogodin-react-utils___src-shared-components-GenericLink-style___link___zH52sA"
  href="relative/link"
  rel="noopener noreferrer"
  target="_blank"
>
  RELATIVE LINL
</a>
`;
